# rs-kessel

./: .gitignore  CLAUDE.md  LICENSE.txt  Makefile  README.md
.github/workflows/: ai-review.yml  ci.yml
configs/: codex.yaml  default.yaml  gallium.yaml  gemma4-e4b.yaml  gemma4.yaml  lfm2.yaml  local-gemma.yaml  local-lfm2.yaml  ministral3.yaml  openai-ja.yaml  openai.yaml  ornith.yaml  qwen3.yaml  system-prompt.md
crates/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/gallium-core/: Cargo.toml
crates/gallium-core/src/: attention.rs  block.rs  ffn.rs  kv_cache.rs  lib.rs  linear_attn.rs  mask.rs  model.rs  norm.rs  pos_enc.rs  quantized.rs  sampling.rs  turbo_kv_cache.rs  turbo_quant.rs
crates/gallium-core/src/kernels/: avx2.rs  avx512.rs  baseline.rs  mod.rs  neon.rs
crates/gallium-models/: Cargo.toml
crates/gallium-models/src/: gemma4.rs  gemma4_q.rs  gemma4_vision.rs  gpt_oss.rs  gpt_oss_q.rs  lfm2moe_q.rs  lib.rs  loader.rs  qwen35.rs  qwen35_q.rs
crates/gallium-models/tests/: integration.rs
crates/lib/: Cargo.toml
crates/lib/src/: acp_client.rs  agent.udl  capture.rs  gemma.rs  github.rs  goal.rs  harmony.rs  lib.rs  llm.rs  llm_gallium.rs  llm_local.rs  mcp.rs  mcp_client.rs  mcp_client_http.rs  mcp_server.rs  memory.rs  model_downloader.rs  protocol.rs  react.rs  situation.rs  skill.rs  tool.rs
crates/lib/src/appserver/: e2e_tests.rs  mod.rs  rpc.rs  server.rs  tools.rs
crates/lib/src/project/: mod.rs  tools.rs
crates/lib/src/vm/: assembler.rs  device.rs  forth.rs  isa.rs  luax.rs  mod.rs  player.rs  png.rs  tools.rs  uxlang.rs  vm.rs
crates/lib/tests/: games_compile.rs
docs/: BACKCHANNEL_SUCCESS.md  CONFIGURATION.md  ENV_VAR_SETUP.md  GEMMA4.md  HARNESS.md  MAKEFILE_TARGETS.md  MAX_TOKENS_FIX.md  OPENAI_SETUP.md  PLAN_MCP.md  REFACTOR.md  VM.md  VOICE_PROCESSING_IO.md
games/: 2048.lua  bounce.lua  bounce.ux  brick.lua  mover.lua  mover.ux  outrun.lua  platform.lua  rogue.lua  shooter.lua  snake.lua  sokoban.lua  sprite.lua  tetris.lua  wall.lua
games/2048/: game.lua
games/bounce/: game.lua
games/brick/: game.lua
games/mover/: game.lua
games/outrun/: game.lua
games/platform/: game.lua
games/rogue/: game.lua
games/shooter/: game.lua
games/snake/: game.lua
games/sokoban/: game.lua
games/sprite/: game.lua
games/tetris/: game.lua
scripts/: build-ios.sh  build-win-cuda.bat  build-win-local.bat  claude-hook.sh  dev_run.sh  gen_uniffi.sh  gen_uniffi_cs.sh  install-claude-hook.sh  test_integration.sh  test_openai.sh  test_tools.sh
skills/: SKILL.md
swift/: Package.swift
swift/AgentApp/: .gitignore
swift/AgentApp/AgentApp/: AgentViewModel.swift  agent_core.swift
swift/AgentApp/Bridge/: kessel_coreFFI.h
swift/Sources/AgentBridge/: AgentFFI.swift  kessel_core.swift
swift/Sources/AgentBridge/include/: kessel_coreFFI.h  module.modulemap
swift/Sources/AgentBridgeFFI/: kessel_coreFFI.h  module.modulemap
swift/Sources/AgentKit/: AgentSession.swift
swift/Sources/KesselCli/: AmbientLoop.swift  Approvals.swift  GoalDriver.swift  LineEditor.swift  PlayWindow.swift  TurnGate.swift  main.swift
swift/Sources/ScreenCapture/: OCR.swift  WindowManager.swift
swift/Sources/TTS/: TextToSpeech.swift
swift/Sources/Util/: Config.swift  ModelDownloader.swift
swift/Sources/Watcher/: SocketReceiver.swift
testsuite/: README.md  extract_response.sh  matrix_runner.sh  runner.sh  rust_cli.sh
testsuite/backends/: gemma4-26b.yaml  gemma4.yaml  gpt-5.4-mini.yaml  gpt-5.6-luna.yaml  gpt-oss.yaml  lfm2.yaml
testsuite/testcases/arithmetic/: check.sh  prompt.txt
testsuite/testcases/capital/: check.sh
testsuite/testcases/file_read/: check.sh  codeword.txt  prompt.txt
testsuite/testcases/instruction/: check.sh  prompt.txt
testsuite/testcases/memory/: check.sh  prompt.txt
win/: .gitignore
win/KesselCli/: AppConfig.cs  DotEnv.cs  KesselCli.csproj  PlayWindow.cs  Program.cs  SpeechInput.cs  VoiceOutput.cs
win/VoiceAgentCLI/: AppConfig.cs  Program.cs  SpeechInput.cs  VoiceAgentCLI.csproj  VoiceOutput.cs
