[package]
name = "kessel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kessel-cli"
path = "src/main.rs"

# Mirrors kessel-core's feature set and forwards it. Without this the binary
# would always pull kessel-core with its defaults (= `local`), so building the
# exe alongside a GPU-flavoured cdylib in one target dir would rebuild the core
# as CPU-`local` and overwrite the GPU kessel_core.dll. Selecting the same
# feature for both packages in a single cargo invocation keeps them consistent.
[features]
default = ["local"]
local = ["kessel-core/local"]
cuda = ["kessel-core/cuda"]
metal = ["kessel-core/metal"]
vulkan = ["kessel-core/vulkan"]

[dependencies]
kessel-core = { path = "../lib", default-features = false }
atty = "0.2"
tracing-subscriber = { workspace = true }
