[package]
name = "gallium-core"
version.workspace = true
edition.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
memmap2 = { workspace = true }
