[package]
name = "gallium-models"
version.workspace = true
edition.workspace = true

[dependencies]
gallium-core = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tokenizers = { workspace = true }
